用async ETVoid取代async void，避免使用async void。 async void，async ETVoid更简单，性能更好。 async ETVoid处理了async void无法捕获异常问题，async ETVoid会Log.Error(e),在AsyncETVoidMethodBuilder中SetException中处理

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -20,8 +20,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Libs\**" />
-    <Compile Include="..\..\Unity\Assets\Model\Base\Async\ETAsyncTaskMethodBuilder.cs">
-      <Link>Base\Async\ETAsyncTaskMethodBuilder.cs</Link>
+    <Compile Include="..\..\Unity\Assets\Model\Base\Async\AsyncETTaskMethodBuilder.cs">
+      <Link>Base\Async\AsyncETTaskMethodBuilder.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Unity\Assets\Model\Base\Async\AsyncETVoidMethodBuilder.cs">
+      <Link>Base\Async\AsyncETVoidMethodBuilder.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Base\Async\ETTask.cs">
       <Link>Base\Async\ETTask.cs</Link>
@@ -31,6 +34,9 @@
     </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Base\Async\ETTaskFactory.cs">
       <Link>Base\Async\ETTaskFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Unity\Assets\Model\Base\Async\ETVoid.cs">
+      <Link>Base\Async\ETVoid.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Base\Async\IAwaiter.cs">
       <Link>Base\Async\IAwaiter.cs</Link>
