增加repl，可以直接调用Model层的数据跟方法，Hotfix层不行，roslyn限制了从内存中加载dll的形式，只支持使用LoadFrom加载， 这样Hotfix.dll文件又会被lock住，而且无法加载pdb，所以还是放弃支持Hotfix层的repl了。如果实在要调用Hotfix层的方法， 可以把hotfix中的代码复制到repl执行一次就行了。

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -328,6 +328,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.2.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.9.0" />
     <PackageReference Include="NLog" Version="4.5.4" />
     <PackageReference Include="SharpZipLib" Version="1.0.0-alpha2" />
   </ItemGroup>
