--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Model\Base\Helper\JsonHelper.cs" />
     <Compile Include="Assets\Model\Base\Helper\MD5Helper.cs" />
     <Compile Include="Assets\Model\Base\Helper\MethodInfoHelper.cs" />
+    <Compile Include="Assets\Model\Base\Helper\MongoHelper.cs" />
     <Compile Include="Assets\Model\Base\Helper\NetHelper.cs" />
     <Compile Include="Assets\Model\Base\Helper\ObjectHelper.cs" />
     <Compile Include="Assets\Model\Base\Helper\RandomHelper.cs" />
