1.去掉了网络协议中的flag字段，可以使用IResponse接口来判断消息是否是rpc返回的消息 2.整理了ErrorCode

--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Assets\Model\ILBinding\ETModel_Session_Binding.cs" />
     <Compile Include="Assets\Model\ILBinding\ETModel_SessionCallbackComponent_Binding.cs" />
     <Compile Include="Assets\Model\ILBinding\ETModel_SessionComponent_Binding.cs" />
+    <Compile Include="Assets\Model\ILBinding\ETModel_StringHelper_Binding.cs" />
     <Compile Include="Assets\Model\ILBinding\ETModel_Unit_Binding.cs" />
     <Compile Include="Assets\Model\ILBinding\ETModel_UnitComponent_Binding.cs" />
     <Compile Include="Assets\Model\ILBinding\ETModel_UnitFactory_Binding.cs" />
