增加ProcessHelper类，所有启动进程的地方都使用这个类

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -50,6 +50,9 @@
     <Compile Include="..\..\Unity\Assets\Model\Base\Object\IDeserializeSystem.cs">
       <Link>Base\Base\IDeserializeSystem.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Model\Base\ProcessHelper.cs">
+      <Link>Base/ProcessHelper.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Component\Config\StartConfig.cs">
       <Link>Component\Config\StartConfig.cs</Link>
     </Compile>
