--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -47,9 +47,6 @@
     <Compile Include="..\..\Unity\Assets\Model\Base\Async\MoveNextRunner.cs">
       <Link>Base\Async\MoveNextRunner.cs</Link>
     </Compile>
-    <Compile Include="..\..\Unity\Assets\Model\Base\CoroutineLockComponent.cs">
-      <Link>Base\CoroutineLockComponent.cs</Link>
-    </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Base\Helper\MongoHelper.cs">
       <Link>Base\Helper\MongoHelper.cs</Link>
     </Compile>
@@ -70,6 +67,9 @@
     </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Module\Config\AConfigComponent.cs">
       <Link>Module\Config\AConfigComponent.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Unity\Assets\Model\Module\CoroutineLock\CoroutineLockComponent.cs">
+      <Link>Module\CoroutineLock\CoroutineLockComponent.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Module\Message\MessagePool.cs">
       <Link>Module\Message\MessagePool\ETModel\MessagePool.cs</Link>
