更正服务端启动配置格式，但是不同IDE还需要根据启动报错做具体路径的改变。
例如：如果是Rider 2019.2及以上版本，尝试使用以下数据
{
  "profiles": {

    "Server.App": {
      "commandName": "Project",
      "commandLineArgs": "--id=1 --config=../StartConfig/AllServer.txt",
      "workingDirectory": "../Bin"
    }
  }
}

--- a/Server/App/Properties/launchSettings.json
+++ b/Server/App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Server.App": {
       "commandName": "Project",
-      "commandLineArgs": "--appId=1 --appType=AllServer --config=../Config/StartConfig/LocalAllServer.txt",
+      "commandLineArgs": "--id=1 --config=../Config/StartConfig/AllServer.txt",
       "workingDirectory": "../../Bin"
     }
   }
