TimerComponent组件Wait方法返回一个bool值，返回true表示正常timeout，返回false表示中途取消计时器 主要原因是为了避免类似using语句因为取消协程导致无法调用到Dispose方法的问题，所以协程即使取消也一定要往下执行 因此增加bool值来判断是否已经取消

--- a/Unity/Unity.HotfixView.csproj
+++ b/Unity/Unity.HotfixView.csproj
@@ -74,6 +74,7 @@
      <Compile Include="Assets\HotfixView\Demo\Unit\AfterUnitCreate_CreateUnitView.cs" />
      <Compile Include="Assets\HotfixView\Helper\ActionHelper.cs" />
      <Compile Include="Assets\HotfixView\Helper\GameObjectHelper.cs" />
+     <Compile Include="Assets\HotfixView\Helper\ResourcesHelper.cs" />
      <Compile Include="Assets\HotfixView\Init.cs" />
      <None Include="Assets\HotfixView\Unity.HotfixView.asmdef" />
  <Reference Include="UnityEditor.UI">
