--- a/Unity/Unity.HotfixView.csproj
+++ b/Unity/Unity.HotfixView.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
@@ -67,7 +67,6 @@
      <Compile Include="Assets\HotfixView\Demo\UI\UILobby\LoginFinish_CreateLobbyUI.cs" />
      <Compile Include="Assets\HotfixView\Demo\UI\UILobby\UILobbyComponentSystem.cs" />
      <Compile Include="Assets\HotfixView\Demo\UI\UILobby\UILobbyFactory.cs" />
-     <Compile Include="Assets\HotfixView\Demo\UI\UILogin\InitSceneStart_CreateLoginUI.cs" />
      <Compile Include="Assets\HotfixView\Demo\UI\UILogin\LoginFinish_RemoveLoginUI.cs" />
      <Compile Include="Assets\HotfixView\Demo\UI\UILogin\UILoginComponentSystem.cs" />
      <Compile Include="Assets\HotfixView\Demo\UI\UILogin\UILoginFactory.cs" />
