--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
@@ -73,7 +73,6 @@
      <Compile Include="Assets\Model\Base\Event\Env.cs" />
      <Compile Include="Assets\Model\Base\Event\EnvKey.cs" />
      <Compile Include="Assets\Model\Base\Event\EventAttribute.cs" />
-     <Compile Include="Assets\Model\Base\Event\EventIdType.cs" />
      <Compile Include="Assets\Model\Base\Event\IEvent.cs" />
      <Compile Include="Assets\Model\Base\Helper\ByteHelper.cs" />
      <Compile Include="Assets\Model\Base\Helper\Dumper.cs" />
@@ -101,7 +100,6 @@
      <Compile Include="Assets\Model\Base\Object\EntityCreateComponet.cs" />
      <Compile Include="Assets\Model\Base\Object\EntityEventAttribute.cs" />
      <Compile Include="Assets\Model\Base\Object\EntityFactory.cs" />
-     <Compile Include="Assets\Model\Base\Object\EventProxy.cs" />
      <Compile Include="Assets\Model\Base\Object\EventSystem.cs" />
      <Compile Include="Assets\Model\Base\Object\HideInHierarchy.cs" />
      <Compile Include="Assets\Model\Base\Object\IAwakeSystem.cs" />
@@ -158,6 +156,7 @@
      <Compile Include="Assets\Model\Entity\SceneChangeComponent.cs" />
      <Compile Include="Assets\Model\Entity\SceneType.cs" />
      <Compile Include="Assets\Model\Entity\TimerComponent.cs" />
+     <Compile Include="Assets\Model\EventType.cs" />
      <Compile Include="Assets\Model\Helper\BundleHelper.cs" />
      <Compile Include="Assets\Model\Helper\PathHelper.cs" />
      <Compile Include="Assets\Model\Helper\PositionHelper.cs" />
